Fix z-index issue

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -40,7 +40,7 @@ body {
 .main-content {
   	// IE7 - need to set this so modals can be in front
 	position: relative;
-	z-index: -1;	
+	z-index: 0;
 }
 
 
